here is the html that goes with the CSS
i forgot to add this with the CSS

--- a/Blue-Harvest/BPA/hunting.html
+++ b/Blue-Harvest/BPA/hunting.html
@@ -67,13 +67,13 @@
       </div>
 </div>
   <div class="row">
-     <div class="six columns">
+     <div class="six columns box">
       <h2><a href="coverscent.html">Homemade Cover Scent</a></h2>
       <!-- Add Image here for Homemade Cover Scent--><img src="_images/cover_scent/cs_step1.png" alt="Cover Scent Product">
       <p>Create a cover scent using materials gathered from your favorite scouting location!</p>
       
   </div>
-     <div class="six columns">
+     <div class="six columns box">
   <h2><a href="targetstand.html">Bow Target Stand</a></h2>
   <!--Add Image here for Bow Target Stand--><img src="_images/archery_stand/ts_step5.gif" alt="Target Stand Final Product">
   <p>This simple stand will elevate your bow target, helping you keep your skills sharp and sight in your bow before your next trip.</p>
