--- a/Blue-Harvest/BPA/camping.html
+++ b/Blue-Harvest/BPA/camping.html
@@ -67,17 +67,17 @@
       </div>
      </div> 
   <div class="row">
-    <div class="six columns">
+    <div class="six columns box">
       <h2><a href="washingstation.html">Hand Washing Station</a></h2>
       <!-- Add Image here for Washing Station--><img src="_images/washing_station/ws_step3.gif" alt="Washing Station Final Product">
       <p>Keep yourself and your camp kitchen clean with this portable solution</p>
       
 </div>
-<div class="six columns"><!--add border(quinn)-->
+<div class="six columns box"><!--add border(quinn)-->
   <h2><a href="firewoodsling.html">Firewood Sling</a></h2>
-  <!--Add Image here for Firewood Sling--><img src="_images/firewood_sling/fs_materials.png" alt="Firewood Sling Materials">
+   <!--Add Image here for Firewood Sling--><img src="_images/firewood_sling/fs_materials.png" alt="Firewood Sling Materials">
   <p>Gather and carry firewood quickly and easily</p>
-  
+ 
 </div>
 </div><!--row-->
 </div><!--container-->
